# pypolygon

./: README.md  pyproject.toml
pypolygon/: endpoint.py  key.py  url.py  utils.py
pypolygon/market/: aggregates.py  grouped_daily.py
pypolygon/models/: market.py  reference.py
pypolygon/reference/: tickers.py
tests/: test_endpoint.py  test_key.py  test_models.py  test_url.py
